--- a/_posts/2014-09-06-My BGM.markdown
+++ b/_posts/2014-09-06-My BGM.markdown
@@ -21,7 +21,7 @@ title: My BGM
 </table>
 
 <h1>Project description</h1>
-My BGM was the first Android App and personal project that I completed in Java. My goal was to familiarize myself with both OOP and also the Android development process. My BGM is a free media player app that allows you to customize your own music playlists for different actions, locations and moods.
+My BGM was the first Android app and personal project that I completed in Java. It is a free media player app that allows you to customize your own music playlists for different actions, locations and moods. The goal was to familiarize myself with both object-oriented programming and also the Android development process, which includes understanding the app lifecycle and managing intents and activities.
 
 <h1>Responsibilities</h1>
 <ul>
