--- a/_drafts/2017-04-07-OCR Tools.markdown
+++ b/_drafts/2017-04-07-OCR Tools.markdown
@@ -1,22 +1,18 @@
 ---
 layout: post
-title: My BGM
+title: OCR Tools
 ---
 <img src="/images/fulls/mybgm-cover.jpg" class="fit image">
 
 <h1>Overview</h1>
 <table>
-<tr>
-<td><span class="icon fa-cog"></span>  Development</td>
-<td>Java, XML (views), Android Studio</td></tr>
-<tr>
-<td><span class="icon fa-users"></span>  Team size</td>
+<tr><td><span class="icon fa-cog"></span> Technology Stack</td>
+<td>Java, XML, Android Studio</td></tr>
+<tr><td><span class="icon fa-users"></span> Team Size</td>
 <td>Solo</td></tr>
-<tr>
-<td><span class="icon fa-tags"></span>  Category</td>
-<td>Personal project</td></tr>
-<tr>
-<td><span class="icon fa-share-alt"></span>  Available links</td>
+<tr><td><span class="icon fa-tags"></span> Project Category</td>
+<td>Personal</td></tr>
+<tr><td><span class="icon fa-share-alt"></span>  Links</td>
 <td><a href = "http://bit.do/mybgm">Google Play</a>, <a href = "https://github.com/pwang347/my-bgm">GitHub Repository</a></td></tr>
 </table>
 
