--- a/_posts/2016-06-4-Chatter.markdown
+++ b/_posts/2016-06-4-Chatter.markdown
@@ -6,16 +6,13 @@ title: Chatter
 
 <h1>Overview</h1>
 <table>
-<tr>
-<td><span class="icon fa-cog"></span>  Development</td>
+<tr><td><span class="icon fa-cog"></span>  Development</td>
 <td>Node JS, Socket.IO, Say.js, MongoDB, HTML5, CSS3</td></tr>
-<tr>
-<td><span class="icon fa-users"></span>  Team size</td>
+<tr><td><span class="icon fa-users"></span>  Team size</td>
 <td>Solo</td></tr>
-<tr>
-<td><span class="icon fa-tags"></span>  Category</td>
+<tr><td><span class="icon fa-tags"></span>  Category</td>
 <td>Personal Project</td></tr>
-<td><span class="icon fa-share-alt"></span>  Available links</td>
+<tr><td><span class="icon fa-share-alt"></span>  Available links</td>
 <td><a href="https://github.com/pwang347/chatter">GitHub Repository</a></td></tr>
 </table>
 
