--- a/_posts/2016-08-29-ProBot AI.markdown
+++ b/_posts/2016-08-29-ProBot AI.markdown
@@ -6,16 +6,13 @@ title: ProBot AI
 
 <h1>Overview</h1>
 <table>
-<tr>
-<td><span class="icon fa-cog"></span>  Development</td>
+<tr><td><span class="icon fa-cog"></span>  Development</td>
 <td>C++, CppUnit, Doxygen, Visual Studio, BWAPI, UMLet</td></tr>
-<tr>
-<td><span class="icon fa-users"></span>  Team size</td>
+<tr><td><span class="icon fa-users"></span>  Team size</td>
 <td>Solo</td></tr>
-<tr>
-<td><span class="icon fa-tags"></span>  Category</td>
+<tr><td><span class="icon fa-tags"></span>  Category</td>
 <td>Personal Project</td></tr>
-<td><span class="icon fa-share-alt"></span>  Available links</td>
+<tr><td><span class="icon fa-share-alt"></span>  Available links</td>
 <td><a href="https://github.com/pwang347/probot-ai">GitHub Repository</a></td></tr>
 </table>
 
