--- a/featured/_posts/2017-04-07-OCR Tools.markdown
+++ b/featured/_posts/2017-04-07-OCR Tools.markdown
@@ -2,7 +2,7 @@
 layout: post_portfolio
 title: OCR Tools
 ---
-<img src="/images/fulls/tmp-cover.png" class="fit image shadow">
+<img src="/images/fulls/ocr-tools-cover.png" class="fit image shadow">
 
 <h1>Overview</h1>
 <table>
