update resume, some todos completed

--- a/featured/_posts/2016-08-29-ProBot AI.markdown
+++ b/featured/_posts/2016-08-29-ProBot AI.markdown
@@ -2,7 +2,7 @@
 layout: post_portfolio
 title: ProBot AI
 ---
-<img src="/images/fulls/probot-cover.jpg" class="fit image shadow">
+<img src="/images/fulls/probot-cover.png" class="fit image shadow">
 
 <h1>Overview</h1>
 <table>
